--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         nix flake update --commit-lock-file || true
     - name: Update inputs
       run: |
-        ./repos/update
+        ./update
     - name: Push commit with updated inputs
       run: |
         git pull --rebase --autostash
