--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
     name: Refresh inputs
     runs-on: ubuntu-latest
     if: github.repository_owner == 'ipvych'
+    permissions:
+      contents: write
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2.3.4
